[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atl08kit"
version = "0.1.0"
description = "ICESat-2 ATL08 extraction, quality filtering, optional water masking, and export utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Yiyi Cen"},
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "h5py>=3.8",
  "shapely>=2.0",
  "rasterio>=1.3",
]

[project.optional-dependencies]
vector = [
  "geopandas>=0.14",
]

dev = [
  "pytest>=7.4",
]

[project.scripts]
atl08kit = "atl08kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]